welcome.lessons.welcome.methods.basics.Methods.scala.code
        def goAndGet() {
        	avance();
        	prendsBiscuit();
        	recule();
        	poseBiscuit();
        }

    